# oop-cpp

./: .gitignore  CMakeLists.txt  main.cpp
Google_tests/: CMakeLists.txt  Run.cpp
Google_tests/s4/: SplitServiceFixtureTest.cpp  SplitServiceFixtureTest.h  SplitServiceTest.cpp  VectorTest.cpp
Google_tests/s5/: DownloadServiceTest.cpp
s2/: FileReader.cpp  FileReader.h  Mobile.cpp  Mobile.h  main.txt
s3/: Person.cpp  Person.h  PersonMem.cpp  PersonMem.h  Singleton.cpp  Singleton.h
s4/: DownloadService.cpp  DownloadService.h  SplitService.cpp  SplitService.h  Vector.cpp  Vector.h
s5/: BitArray.cpp  BitArray.h  CacheService.cpp  CacheService.h  DownloadService.cpp  DownloadService.h
